Created project for manipulation with OS from service

--- a/RemoteController/RemoteController.Service/RemoteController.Service.csproj
+++ b/RemoteController/RemoteController.Service/RemoteController.Service.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RemoteController.Manipulator\RemoteController.Manipulator.csproj" />
     <ProjectReference Include="..\RemoteController.WebSocket\RemoteController.WebSocket.csproj" />
   </ItemGroup>
 
