--- a/RemoteController/RemoteController.Informer/RemoteController.Informer.csproj
+++ b/RemoteController/RemoteController.Informer/RemoteController.Informer.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Epsiloner.Core" Version="1.0.11" />
     <PackageReference Include="NAudio" Version="1.9.0" />
   </ItemGroup>
 
