--- a/RemoteController/RemoteController.Service/RemoteController.Service.csproj
+++ b/RemoteController/RemoteController.Service/RemoteController.Service.csproj
@@ -16,6 +16,11 @@
     <PackageReference Include="NLog.Schema" Version="4.6.7" />
     <PackageReference Include="Topshelf" Version="4.2.1" />
     <PackageReference Include="Topshelf.NLog" Version="4.2.1" />
+
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -31,10 +36,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="settings.config" />
     <None Remove="Web\files.html" />
     <None Remove="Web\movie.html" />
     <None Remove="Web\Scripts\files.js" />
     <None Remove="Web\Styles\styles.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="settings.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
   </ItemGroup>
 
 </Project>
