--- a/RemoteController/RemoteController.Client/ClientApp/package.json
+++ b/RemoteController/RemoteController.Client/ClientApp/package.json
@@ -33,6 +33,7 @@
     "oidc-client": "^1.9.0",
     "popper.js": "^1.15.0",
     "rxjs": "^6.4.0",
+    "sortablejs": "^1.10.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
