Changed folders in config.

--- a/RemoteController/RemoteController.Service/settings.config
+++ b/RemoteController/RemoteController.Service/settings.config
@@ -3,9 +3,11 @@
 		"Roots": {
 			"Testing": "C:\\testing",
 			"Download":  "E:\\Download",
-			"Downloads": "C:\\Users\\Epsil0neR\\Downloads"
+			"Downloads": "C:\\Users\\Epsil0neR\\Downloads",
+			"Movies": "E:\\Movies",
+			"Projects: "E:\\Projects"
 		}
-	},
+	}
 	"Server": {
 		"Port": 6431
 	}
