--- a/RemoteController/RemoteController.Service/settings.config
+++ b/RemoteController/RemoteController.Service/settings.config
@@ -5,9 +5,9 @@
 			"Download":  "E:\\Download",
 			"Downloads": "C:\\Users\\Epsil0neR\\Downloads",
 			"Movies": "E:\\Movies",
-			"Projects: "E:\\Projects"
+			"Projects": "E:\\Projects"
 		}
-	}
+	},
 	"Server": {
 		"Port": 6431
 	}
