--- a/RemoteController/RemoteController.Client/ClientApp/package.json
+++ b/RemoteController/RemoteController.Client/ClientApp/package.json
@@ -23,36 +23,36 @@
     "@angular/platform-server": "8.2.14",
     "@angular/router": "8.2.14",
     "@fortawesome/angular-fontawesome": "^0.5.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@nguniversal/module-map-ngfactory-loader": "8.0.0-rc.1",
     "aspnet-prerendering": "^3.0.1",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.6.5",
+    "bootstrap": "^4.4.1",
+    "core-js": "^2.6.11",
     "jquery": "^3.4.1",
     "ngx-sortablejs": "^3.1.3",
-    "oidc-client": "^1.9.0",
-    "popper.js": "^1.15.0",
-    "rxjs": "^6.5.3",
-    "sortablejs": "^1.10.1",
+    "oidc-client": "^1.10.1",
+    "popper.js": "^1.16.1",
+    "rxjs": "^6.5.4",
+    "sortablejs": "^1.10.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.20",
+    "@angular-devkit/build-angular": "^0.803.23",
     "@angular/cli": "8.3.20",
     "@angular/compiler-cli": "8.2.14",
     "@angular/language-service": "8.2.14",
-    "@types/jasmine": "~3.3.9",
-    "@types/jasminewd2": "~2.0.6",
+    "@types/jasmine": "^3.3.16",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~11.10.5",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.5",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
     "typescript": "3.5.3"
   },
   "optionalDependencies": {
