--- a/RemoteController/RemoteController.Service/RemoteController.Service.csproj
+++ b/RemoteController/RemoteController.Service/RemoteController.Service.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <None Remove="settings.config" />
     <None Remove="Web\files.html" />
+    <None Remove="Web\index.html" />
     <None Remove="Web\movie.html" />
     <None Remove="Web\Scripts\files.js" />
     <None Remove="Web\Styles\styles.css" />
