--- a/RemoteController/RemoteController.Informer/RemoteController.Informer.csproj
+++ b/RemoteController/RemoteController.Informer/RemoteController.Informer.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Epsiloner.Core" Version="1.0.11" />
     <PackageReference Include="NAudio" Version="1.9.0" />
-    <PackageReferebce Include="OpenHardwareMonitor.Core" Version="0.8.0.5" />
+    <PackageReference Include="OpenHardwareMonitor.Core" Version="0.8.0.5" />
   </ItemGroup>
 
 </Project>
