--- a/RemoteController/RemoteController.Service/RemoteController.Service.csproj
+++ b/RemoteController/RemoteController.Service/RemoteController.Service.csproj
@@ -8,11 +8,17 @@
     <PublishReadyToRun>true</PublishReadyToRun>
     <ApplicationIcon>icon.ico</ApplicationIcon>
 
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <AssemblyVersion>$(Version)</AssemblyVersion>
 
     <Authors>Veniamin Lytkin @ Epsil0neR</Authors>
     <Copyright>Copyright © Epsil0neR 2020</Copyright>
+    <ChangeLog>v1.1.0:
+- Navigation panel closes when click outside that panel.
+- Added ability to delete page (while editing page).
+- Improved logging and output to console.
+
+    </ChangeLog>
     <!--<PublishSingleFile>true</PublishSingleFile>-->
   </PropertyGroup>
 
