--- a/RemoteController/RemoteController/NLog.config
+++ b/RemoteController/RemoteController/NLog.config
@@ -11,7 +11,7 @@
   
   <targets>
     <target xsi:type="File" name="f" fileName="${filename}" layout="${detailLayout}" />
-    <target name="m" xsi:type="MethodCall" className="RemoteController.Service.Program, RemoteController.Service" methodName="LogMethod">
+    <target name="m" xsi:type="MethodCall" className="RemoteController.App, RemoteController" methodName="LogMethod">
       <parameter layout="${level}" />
       <parameter layout="${message}" />
     </target>
