--- a/RemoteController/RemoteController.Core/RemoteController.Core.csproj
+++ b/RemoteController/RemoteController.Core/RemoteController.Core.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <RootNamespace>RemoteController</RootNamespace>
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <Authors>Veniamin Lytkin @ Epsil0neR</Authors>
@@ -9,7 +10,6 @@
 
   <ItemGroup>
     <PackageReference Include="Epsiloner.Core" Version="1.0.19" />
-    <PackageReference Include="Epsiloner.Wpf.Core" Version="1.0.16" />
     <PackageReference Include="Unity" Version="5.11.6" />
   </ItemGroup>
 </Project>
