Added support of .net4.7.2 (WPF project moved to that version)

--- a/RemoteController/RemoteController.Core/RemoteController.Core.csproj
+++ b/RemoteController/RemoteController.Core/RemoteController.Core.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <RootNamespace>RemoteController</RootNamespace>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <Authors>Veniamin Lytkin @ Epsil0neR</Authors>
     <Copyright>Copyright © Epsil0neR 2020</Copyright>
+    <TargetFrameworks>net472;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
