--- a/RemoteController/RemoteController/RemoteController.csproj
+++ b/RemoteController/RemoteController/RemoteController.csproj
@@ -8,11 +8,14 @@
 
     <Authors>Veniamin Lytkin @ Epsil0neR</Authors>
     <Copyright>Copyright © Epsil0neR 2020</Copyright>
+    <LangVersion>9</LangVersion>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
 
   <ItemGroup>
     <PackageReference Include="Epsiloner.Core" Version="1.0.21" />
+    <PackageReference Include="Epsiloner.Wpf.Core" Version="1.0.16" />
     <PackageReference Include="NLog" Version="4.7.2" />
     <PackageReference Include="NLog.Config" Version="4.7.2" />
     <PackageReference Include="NLog.Schema" Version="4.7.2" />
