--- a/RemoteController/RemoteController/RemoteController.csproj
+++ b/RemoteController/RemoteController/RemoteController.csproj
@@ -16,6 +16,8 @@
   <ItemGroup>
     <PackageReference Include="Epsiloner.Core" Version="1.0.21" />
     <PackageReference Include="Epsiloner.Wpf.Core" Version="1.0.16" />
+    <PackageReference Include="Epsiloner.Wpf.SymbolIcons" Version="1.0.0" />
+    <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
     <PackageReference Include="NLog" Version="4.7.2" />
     <PackageReference Include="NLog.Config" Version="4.7.2" />
     <PackageReference Include="NLog.Schema" Version="4.7.2" />
