--- a/RemoteController/RemoteController/RemoteController.csproj
+++ b/RemoteController/RemoteController/RemoteController.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Epsiloner.Core" Version="1.0.21" />
+    <PackageReference Include="Epsiloner.OptionsModule" Version="0.3.9" />
     <PackageReference Include="Epsiloner.Wpf.Core" Version="1.0.16" />
     <PackageReference Include="Epsiloner.Wpf.SymbolIcons" Version="1.0.0" />
     <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
