--- a/RemoteController/RemoteController.Core/RemoteController.Core.csproj
+++ b/RemoteController/RemoteController.Core/RemoteController.Core.csproj
@@ -5,7 +5,7 @@
 
     <Authors>Veniamin Lytkin @ Epsil0neR</Authors>
     <Copyright>Copyright © Epsil0neR 2020</Copyright>
-    <TargetFrameworks>net472;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net5.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
