Implemented command creation in UI. Renamed buttonstyle.xaml to button.xaml

--- a/RemoteController/RemoteController/RemoteController.csproj
+++ b/RemoteController/RemoteController/RemoteController.csproj
@@ -55,6 +55,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="Resources\Styles\TextBox.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="Resources\Styles\StyledWindow.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
