Angular - added WakeLock feature.

--- a/RemoteController/RemoteController.Client/ClientApp/src/tsconfig.app.json
+++ b/RemoteController/RemoteController.Client/ClientApp/src/tsconfig.app.json
@@ -9,6 +9,7 @@
     "polyfills.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "node_modules/@types/dom-screen-wake-lock/index.d.ts"
   ]
 }
