--- a/RemoteController/RemoteController/RemoteController.csproj
+++ b/RemoteController/RemoteController/RemoteController.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BouncyCastle.NetCore" Version="1.8.8" />
     <PackageReference Include="Epsiloner.Core" Version="1.0.21" />
     <PackageReference Include="Epsiloner.OptionsModule" Version="0.3.9" />
     <PackageReference Include="Epsiloner.Wpf.Core" Version="1.0.16" />
@@ -45,6 +46,10 @@
     </Compile>
 
     <None Update="NLog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+
+    <None Update="RemoteController.pfx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
