--- a/RemoteController/RemoteController.Informer/RemoteController.Informer.csproj
+++ b/RemoteController/RemoteController.Informer/RemoteController.Informer.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="NAudio" Version="1.10.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RemoteController.Manipulator\RemoteController.Manipulator.csproj" />
+  </ItemGroup>
+
 </Project>
