Added shorted logger.

--- a/RemoteController/RemoteController/NLog.config
+++ b/RemoteController/RemoteController/NLog.config
@@ -8,9 +8,11 @@
 
   <variable name="filename" value="${basedir}/logs/${longdate:cached=true}.log"/>
   <variable name="detailLayout" value="${longdate:universalTime=true} [${threadid}] ${uppercase:${level}} ${callsite:cleanNamesOfAnonymousDelegates=true:cleanNamesOfAsyncContinuations=true}:${callsite-linenumber} ${message}${onexception:inner=${newline}Stack Trace\: ${exception:format=tostring}}"/>
+  <variable name="shortLayout" value="${longdate:universalTime=true} [${threadid}] ${uppercase:${level}} ${message}${onexception:inner=${newline}Stack Trace\: ${exception:format=tostring}}"/>
   
   <targets>
     <target xsi:type="File" name="f" fileName="${filename}" layout="${detailLayout}" />
+    <target xsi:type="Short" name="f" fileName="${filename}" layout="${shortLayout}" />
     <target name="m" xsi:type="MethodCall" className="RemoteController.App, RemoteController" methodName="LogMethod">
       <parameter layout="${level}" />
       <parameter layout="${message}" />
