--- a/RemoteController/RemoteController/RemoteController.csproj
+++ b/RemoteController/RemoteController/RemoteController.csproj
@@ -11,7 +11,10 @@
     <Copyright>Copyright © Epsil0neR 2020</Copyright>
     <LangVersion>9</LangVersion>
     <IsPackable>false</IsPackable>
-    <ApplicationIcon>icon.ico</ApplicationIcon>
+    <Version>1.2.0</Version>
+    <ApplicationIcon>$(Version)</ApplicationIcon>
+    <AssemblyVersion>$(Version)</AssemblyVersion>
+    <FileVersion>$(Version)</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
