--- a/RemoteController/RemoteController/RemoteController.csproj
+++ b/RemoteController/RemoteController/RemoteController.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Epsiloner.Core" Version="1.0.22" />
     <PackageReference Include="Epsiloner.OptionsModule" Version="0.4.0" />
     <PackageReference Include="Epsiloner.Wpf.Core" Version="1.2.0" />
+    <PackageReference Include="Epsiloner.Wpf.Behaviors" Version="1.1.0" />
     <PackageReference Include="Epsiloner.Wpf.SymbolIcons" Version="1.0.1" />
     <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1.1" />
     <PackageReference Include="NLog" Version="4.7.9" />
