--- a/RemoteController/RemoteController.WebSocket/RemoteController.WebSocket.csproj
+++ b/RemoteController/RemoteController.WebSocket/RemoteController.WebSocket.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net6.0</TargetFrameworks>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
