--- a/RemoteController/RemoteController.Manipulator/RemoteController.Manipulator.csproj
+++ b/RemoteController/RemoteController.Manipulator/RemoteController.Manipulator.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AudioSwitcher.AudioApi.CoreAudio" Version="3.0.0.1" />
     <PackageReference Include="InputSimulatorCore" Version="1.0.5" />
     <PackageReference Include="NLog" Version="4.7.9" />
   </ItemGroup>
