--- a/RemoteController/RemoteController.Client/RemoteController.Client.csproj
+++ b/RemoteController/RemoteController.Client/RemoteController.Client.csproj
@@ -11,6 +11,7 @@
     <!-- Set this to true if you enable server-side prerendering -->
     <BuildServerSideRenderer>false</BuildServerSideRenderer>
     <LangVersion>latest</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
