--- a/RemoteController/RemoteController.Informer/RemoteController.Informer.csproj
+++ b/RemoteController/RemoteController.Informer/RemoteController.Informer.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>net6.0-windows</TargetFrameworks>
     <LangVersion>latest</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
