--- a/RemoteController/RemoteController.WebSocket/RemoteController.WebSocket.csproj
+++ b/RemoteController/RemoteController.WebSocket/RemoteController.WebSocket.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>net6.0</TargetFrameworks>
     <LangVersion>latest</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
