Sound devices functionality improve. Unused usings removed in solution.

--- a/RemoteController/RemoteController.Manipulator/RemoteController.Manipulator.csproj
+++ b/RemoteController/RemoteController.Manipulator/RemoteController.Manipulator.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>net6.0</TargetFrameworks>
@@ -7,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AudioSwitcher.AudioApi.CoreAudio" Version="3.0.0.1" />
     <PackageReference Include="InputSimulatorCore" Version="1.0.5" />
     <PackageReference Include="NLog" Version="4.7.9" />
   </ItemGroup>
