--- a/RemoteController/RemoteController.WinUi/appsettings.json
+++ b/RemoteController/RemoteController.WinUi/appsettings.json
@@ -1,6 +1,44 @@
 ﻿{
-    "LocalSettingsOptions": {
-      "ApplicationDataFolder": "RemoteController.WinUi/ApplicationData",
-      "LocalSettingsFile": "LocalSettings.json"
+  "LocalSettingsOptions": {
+    "ApplicationDataFolder": "RemoteController.WinUi/ApplicationData",
+    "LocalSettingsFile": "LocalSettings.json"
+  },
+  "Serilog": { // https://github.com/serilog/serilog-settings-configuration/#serilogsettingsconfiguration--
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File",
+      "Serilog.Sinks.Debug"
+    ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": { "path": "Logs/log.txt" }
+      },
+      { "Name": "Debug" },
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Destructure": [
+      //{
+      //  "Name": "With",
+      //  "Args": { "policy": "Sample.CustomPolicy, Sample" }
+      //},
+      //{
+      //  "Name": "ToMaximumDepth",
+      //  "Args": { "maximumDestructuringDepth": 4 }
+      //},
+      //{
+      //  "Name": "ToMaximumStringLength",
+      //  "Args": { "maximumStringLength": 100 }
+      //},
+      //{
+      //  "Name": "ToMaximumCollectionCount",
+      //  "Args": { "maximumCollectionCount": 10 }
+      //}
+    ],
+    "Properties": {
+      "Application": "RemoteController.WinUi app"
     }
+  }
 }
