--- a/RemoteController/RemoteController.Manipulator/RemoteController.Manipulator.csproj
+++ b/RemoteController/RemoteController.Manipulator/RemoteController.Manipulator.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="InputSimulatorCore" Version="1.0.5" />
-    <PackageReference Include="NLog" Version="4.7.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.3" />
   </ItemGroup>
 
   <ItemGroup>
