Add writable options and add some sections for future.
Add link to source.

--- a/RemoteController/RemoteController.WinUi/appsettings.json
+++ b/RemoteController/RemoteController.WinUi/appsettings.json
@@ -2,5 +2,12 @@
   "LocalSettingsOptions": {
     "ApplicationDataFolder": "RemoteController.WinUi/ApplicationData",
     "LocalSettingsFile": "LocalSettings.json"
+  },
+  "GeneralOptions": {
+    "StartupWithOS": false
+  },
+  "ServerOptions": {
+    "Port": 443,
+    "StartWithApp":  false
   }
 }
