Sample of updating appsettings.json

--- a/RemoteController/RemoteController.WinUi/RemoteController.WinUi.csproj
+++ b/RemoteController/RemoteController.WinUi/RemoteController.WinUi.csproj
@@ -48,7 +48,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<None Update="appsettings.json">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
 
