Added informers and manipulations. Code clean-up.

--- a/RemoteController/RemoteController.WinUi/appsettings.json
+++ b/RemoteController/RemoteController.WinUi/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "LocalSettingsOptions": {
     "ApplicationDataFolder": "RemoteController.WinUi/ApplicationData",
     "LocalSettingsFile": "LocalSettings.json"
@@ -9,5 +9,17 @@
   "ServerOptions": {
     "Port": 443,
     "StartWithApp":  false
+  },
+  "FileSystemOptions": {
+    "Roots": [
+      {
+        "Name": "Downloads",
+        "Path": "E:\\Downloads"
+      },
+      {
+        "Name": "Download",
+        "Path": "E:\\Download"
+      }
+    ]
   }
 }
