--- a/RemoteController/RemoteController.WinUi/RemoteController.WinUi.csproj
+++ b/RemoteController/RemoteController.WinUi/RemoteController.WinUi.csproj
@@ -61,6 +61,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\RemoteController.Informer\RemoteController.Informer.csproj" />
+		<ProjectReference Include="..\RemoteController.Manipulator\RemoteController.Manipulator.csproj" />
 		<ProjectReference Include="..\RemoteController.WebSocket\RemoteController.WebSocket.csproj" />
 		<ProjectReference Include="..\RemoteController.WinUi.Core\RemoteController.WinUi.Core.csproj" />
 	</ItemGroup>
