--- a/RemoteController/RemoteController.WinUi.Tests.MSTest/RemoteController.WinUi.Tests.MSTest.csproj
+++ b/RemoteController/RemoteController.WinUi.Tests.MSTest/RemoteController.WinUi.Tests.MSTest.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net7.0-windows10.0.19041.0</TargetFramework>
     <RootNamespace>RemoteController.WinUi.Tests.MSTest</RootNamespace>
-    <Platforms>x86;x64;arm64</Platforms>
+    <Platforms>x86;x64</Platforms>
     <IsPackable>false</IsPackable>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
