--- a/RemoteController/RemoteController.WinUi/RemoteController.WinUi.csproj
+++ b/RemoteController/RemoteController.WinUi/RemoteController.WinUi.csproj
@@ -31,6 +31,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Styles\Colors.xaml" />
+    <None Remove="Styles\Controls\KeyVisual.xaml" />
+    <None Remove="Styles\Controls\VirtualKeyVisual.xaml" />
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
@@ -46,6 +48,7 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Labs.WinUI.SettingsControls" Version="0.0.18" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+    <PackageReference Include="CommunityToolkit.WinUI.UI.Media" Version="7.1.2" />
     <PackageReference Include="Epsiloner.Wpf.Core" Version="1.2.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
